--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 /* src/index.css */
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
+@import "tailwindcss";
+@config "../tailwind.config.js";
 
 @layer utilities {
   .line-clamp-1 {
